2003-04-06 Damien Sandras  <dsandras@seconix.com>

	* src/menu.cpp, src/menu.h: Added Hold Call support.
	
2003-04-03 Damien Sandras  <dsandras@seconix.com>

	* src/sound_handling.cpp: Fixed stray in the previous commit.
	
2003-04-03 Damien Sandras  <dsandras@seconix.com>

	* src/sound_handling.cpp, configure.in: Added patches for 
	MacOSX support thanks to Pai-Hsiang Hsiao.
	
2003-04-03 Damien Sandras  <dsandras@seconix.com>

	* src/connection.cpp: Fixed display of text chat messages
	that are not text chat messages.

	* src/endpoint.cpp: /

	* src/gdkvideoio.cpp, src/gdkvideoio.h: Cleaned and documented the 
	current code.
	
2003-04-03 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp, src/endpoint.h, src/gatekeeper.cpp: Fixed problems
	with Citron GK NAT support compilation.

2003-03-28 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp, src/endpoint.h: Removed Citron GK support.

	* src/gatekeeper.cpp: Removed Citron GK support.

	* src/gdkvideoio.cpp, src/gdkvideoio.h: Fixes to be compatible
	with OpenH323 CVS. Directly use RGB for SDL instead of YUVOverlays.
	
	* src/videograbber.cpp: Fixes to be compatible with OpenH323 CVS.
	
2003-03-28 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Make sure to remove the listener before exiting.

	* src/videograbber.cpp: Fixed video_format setting.
	
2003-03-26 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp, src/endpoint.h: Applied patch from Fabrice 
	Alphonso <fabrice@alphonso.dyndns.org> to add timestamp to saved
	snapshot files.
	
2003-03-25 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Applied patch from Stefan Bruens to fix compilation
	on Suse.
	
2003-03-25 Damien Sandras  <dsandras@seconix.com>

	* endpoint.cpp: Changed destructor.
	* gnomemeeting.cpp: Changed destructor.
	* main_window.cpp: Make sure the call is cleared before deleting
	the Main Application.
	
	
2003-03-25 Damien Sandras  <dsandras@seconix.com>
