@@ -1,3 +1,11 @@
+2003-04-08 Damien Sandras  <dsandras@seconix.com>
+
+	* lib/xdap/xdap.c: Removed boring warning until it gets fixed.
+	
+	* src/gnomemeeting.cpp, src/toolbar.cpp, src/urlhandler.cpp: Added 
+	support for full pwlib callto parsing. Make sure the plug in the
+	connect button stays "plugged" until we are really disconnected.
+	
 2003-04-06 Damien Sandras  <dsandras@seconix.com>
 
 	* src/menu.cpp, src/menu.h: Added Hold Call support.
